# codex_mcp_finetune_auditor

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
configs/: mock_no_sae.yaml  mock_with_sae.yaml  template_hf.yaml  template_mock.yaml
data/: aoa_dataset.json  mock_sae.safetensors  mock_training.jsonl
docs/: AUDITOR_INVESTIGATION_NOTES_2026-01-18.md  GITHUB_ABOUT.md  METHODOLOGY.md  README.md
notebooks/: GemmaScope2_Audit_Clean_Modular_reviewed_plus_neighbors_v3.ipynb  GemmaScope2_Finetune_Audit.ipynb
prompt_suites/: minimal.yaml
scripts/: run_real_audits_template.py  set_github_about.py
src/codex_mcp_auditor/: __init__.py  cli.py  config.py  server.py  session.py
src/codex_mcp_auditor/backends/: __init__.py  base.py  hf.py  mock.py
src/codex_mcp_auditor/interp/: __init__.py  neighbors.py  neuronpedia.py  sae.py
src/codex_mcp_auditor/schemas/: __init__.py  common.py  interp.py
src/codex_mcp_auditor/utils/: config_io.py
tests/: conftest.py  helpers.py  test_cli_aggregate.py  test_cli_benchmark.py  test_config_io.py  test_config_validation.py  test_hf_helpers.py  test_interp_sae_neighbors.py  test_mock_backend.py  test_neuronpedia_client.py  test_server_build.py  test_server_http_guard.py  test_server_stdio.py  test_session_behavior.py  test_session_cleanup.py  test_session_dataset.py  test_session_nearest_explained_neighbors.py
