[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-mcp-finetune-auditor"
version = "0.1.0"
description = "MCP server + harness for auditing benign vs adversarial fine-tunes using behavior + SAE interpretability."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hanan Ather"}]
dependencies = [
  "mcp[cli]>=0.5.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
  "tqdm>=4.66",
]

[project.optional-dependencies]
hf = [
  "torch>=2.1",
  "transformers>=4.41",
  "safetensors>=0.4",
  "huggingface_hub>=0.23",
  "numpy>=1.24",
]
faiss = [
  "faiss-cpu>=1.8",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
ft-audit-mcp = "codex_mcp_auditor.server:main"
ft-audit = "codex_mcp_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
